# CAL

./: .gitignore  CMakeLists.txt  README.md  ReadMe_testeFase2.txt  ReadMe_testeFase3.txt  ShortcutsParaTestes.txt  main.cpp  res1.txt  res2.txt  res3.txt  res4.txt  res5.txt  resFase1.txt  resfas1.txt  resultado3Fase.txt  resultsAStar.csv  resultsHeldKarp.csv  shortcuts.txt  temp.txt  testeFarmFase2Porto.txt  testeResultadoFase3.txt
AnalysisResults/: results3Phase.txt  resultsAStar.csv  resultsAStar.txt  resultsAStar2.csv  resultsAStar2.txt  resultsAStar3.csv  resultsAStar3.txt  resultsAStarFixed.txt  resultsConnectivity.csv  resultsConnectivity.txt
FarmFresh2You/: Basket.cpp  Basket.h  FarmFresh2You.cpp  FarmFresh2You.h  Truck.cpp  Truck.h  estruturaFarm.txt  testeTruckFase3.txt  truckStructure.txt  trucks.txt  trucks2.txt
algoritmia/: aStar.cpp  aStar.h  conectivityAnalysis.cpp  conectivityAnalysis.h  heldKarp.cpp  heldKarp.h  thirdPhase.cpp  thirdPhase.h
deliveries/: estruturaCabaz.txt  exemploCabaz.txt  exemploCabaz2.txt  exemploCabazBig.txt  res.fas1  resFase1.txt  resFase2.txt  testeCabaz1.txt  testeCabaz2.txt  testeCabaz3.txt  testeCabaz4.txt  testeCabaz5.txt  testeCabaz6.txt  testeCabazFase2.txt  testeCabazFase2Porto.txt  testeCabazFase3.txt  testeCabazFase3Porto.txt
graph/: Graph.h  VerticeNotFound.h
iofunctions/: BasketsIO.cpp  BasketsIO.h  FarmerFresh2YouIO.cpp  FarmerFresh2YouIO.h  FileNotFound.h  Graphio.cpp  Graphio.h  TrucksIO.cpp  TrucksIO.h
menus/: Menus.cpp  Menus.h
pseudocode/: aStar.txt  connectivity.txt  thirdPhase.txt
(+2 files in other folders)
